<resources>
    <string name="app_name">Panpan</string>
    <string name="app_name_cap">PANPAN</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="subscribe">Add</string>
    <string name="unsubscribe">Remove</string>
    <string name="hometabs">hometabs</string>
    <string name="please_wait">Please wait</string>
    <string name="enter_email_message">Please enter email...</string>
    <string name="enter_password_message">Please enter password...</string>
    <string name="login_success">Login Success</string>
    <string name="login_error">Login failed! Try again</string>
    <string name="verification_code_popop_title">Verification Code</string>
    <string name="verification_code_please_wait_message">Please wait, while we are verifying verification code</string>
    <string name="write_verification_code_here">Please write verification code first</string>
    <string name="code_verified">Code verified!</string>
    <string name="wrong_code">Wrong code! Try again</string>
    <string name="phonenumberrequired">Phone number is required</string>
    <string name="pleaseenterphonenumber">mobile number</string>
    <string name="send_verification_code_button">Request OTP</string>
    <string name="sendingverificationcode_wait_message">We are sending verification code. Please wait!</string>
    <string name="entervalidphonenumber">Invalid Phone number, please enter 10 digits indian mobile number e.g. 9876543210</string>
    <string name="writeyourname">Please write your user name first..</string>
    <string name="writeastatus">"Please write your status..."</string>
    <string name="codesent">Verification code sent!</string>
    <string name="loadingmessage">Please wait! Loading...</string>
    <string name="writefirstmessage">first write your message...</string>
    <string name="video">Video</string>
    <string name="Docs">DOCs</string>
    <string name="image">Image/Camera</string>
    <string name="PDF">PDF</string>
    <string name="selectfiletype">Select file type</string>
    <string name="mygrouptab">My groups</string>
    <string name="allgrouptab">All groups</string>
    <string name="search">Search</string>
    <string name="rationale_photo_picker">android.permission.WRITE_EXTERNAL_STORAGE</string>
    <string name="groupchatdisplaymessage">Please subscribe to chat</string>
    <string name="subscribedtoChat">Subscribe to chat</string>
    <string name="filesizeerrormessage">File size should be less than 16 MB</string>
    <string name="filemorethan10MB">File size more than 10MB takes ~15 seconds </string>
    <string name="default_notification_channelid">app_channel_id</string>
    <string name="questions">Questions</string>
    <string name="groups">Groups</string>
    <string name="ans">Answers</string>
    <string name="user_national_ranking">Ranking</string>
    <string name="view_group">View</string>
    <string name="subscribed_group_removed">A Group has been removed</string>
    <string name="subscribed_group_added">A new group has been added!</string>
    <string name="india_isd_code">+91</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="updating_settings">Updating profile...</string>
    <string name="search_hint">railway, salman etc.</string>
    <string name="loading">Loading...</string>
    <string name="group_description">Group Description</string>
    <string name="group_detail">Group Detail</string>
    <string name="enter_your_phone_numer">Enter your phone number </string>
    <string name="enter_code_here">Enter your code here</string>
    <string name="verify_code">Verify code</string>
    <string name="can_not_send_notification_within_15minutes">You can\'t send notification within 15 minutes in the same group.</string>
    <string name="be_first_one_to_chat">Be the first one to chat</string>
    <string name="error_occurred">Error occured</string>
    <string name="new_message_notification">New messages</string>
    <string name="upload_failed">Upload failed</string>
    <string name="could_not_send_last_message">Could not send the last message</string>
    <string name="updating_profile">Updating profile...</string>
    <string name="delete">Change</string>
    <string name="remove">Delete</string>
    <string name="update_your_name">Please update your name</string>
    <string name="profile_updated">Profile updated!</string>
    <string name="no_pic_present">No profile pic!</string>
    <string name="message_reported">Message Reported</string>
    <string name="message_reporting_failed">Message reporting failed</string>
    <string name="request_group">Request group</string>
    <string name="new_group">New Group/feedback/suggestion</string>
    <string name="write_something_about_new_group">Write something about your group</string>
    <string name="new_group_request_registered">Your request has been accepted!</string>
    <string name="new_group_request_registered_failed">Your request for a new group has failed!!</string>
    <string name="write_something_about_new_group_message">Please write something about your group</string>
    <string name="write_at_least_5_words">Please write at least 5 words!</string>
    <string name="short_app_description">There are many groups in the app and you can subscribe to any or all of them for free. Groups are for common use. Example hospital, marriage, vehicle, job, etc.</string>
    <string name="there_are_three_tabs_in_the_app">There are three tabs in the app.</string>
    <string name="mygroup_desc">You can see all the groups you have added. You can chat in any group here.</string>
    <string name="allgroup_desc">You can find all the groups in this section. You can add them and remove any group from here.</string>
    <string name="searchgroup_desc">You can search for any group here. such as Gupta marriage, Bihar hospital, etc</string>
    <string name="help_request">Help</string>
</resources>