<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".activity.help.HelpActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name_cap"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        android:textSize="20dp"
        >
    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/short_app_description"
        android:textColor="@color/colorLightBlack"

        android:textSize="20dp"
        >
    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/there_are_three_tabs_in_the_app"
        android:textColor="@color/colorLightBlack"
        android:textSize="20dp"
        >
    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mygrouptab"
        android:textColor="@color/colorBlack"
        android:paddingTop="10dp"
        android:textStyle="bold"
        android:textSize="20dp"
        >
    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mygroup_desc"
        android:textColor="@color/colorLightBlack"

        android:textSize="20dp"
        >
    </TextView>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/allgrouptab"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        android:textSize="20dp"
        android:paddingTop="10dp"
        >
    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/allgroup_desc"
        android:textColor="@color/colorLightBlack"
        android:textSize="20dp"
        >
    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        android:paddingTop="10dp"
        android:textSize="20dp"
        >
    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/searchgroup_desc"
        android:textColor="@color/colorLightBlack"
        android:textSize="20dp"
        >
    </TextView>



</LinearLayout>